# mlir-mutate

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_mlir.sh
include/: CMakeLists.txt  mutate.h
include/mlir-hlo/Dialect/mhlo/IR/: CMakeLists.txt  chlo_ops.h  chlo_ops.td  hlo_ops.h  hlo_ops.td  hlo_ops_base.td  hlo_ops_base_structs.h  hlo_ops_base_structs.td  hlo_utils.td  infer_fusibility_op_interface.h  infer_fusibility_op_interface.td  lhlo_gpu_ops.h  lhlo_gpu_ops.td  lhlo_gpu_ops_base.td  lhlo_gpu_ops_structs.h  lhlo_gpu_ops_structs.td  lhlo_ops.h  lhlo_ops.td  lhlo_ops_base.td  register.h
include/mlir-hlo/Dialect/mhlo/transforms/: lmhlo_passes.td  map_hlo_to_lhlo_op.h  map_lmhlo_to_scalar_op.h  mhlo_passes.td  passes.h  register_passes.h  rewriters.h
include/mlir-hlo/utils/: broadcast_utils.h  convert_op_folder.h  cycle_detector.h  hlo_utils.h
include/tfrt/basic_kernel/: CMakeLists.txt  basic_kernels.h  basic_kernels.td
lib/: CMakeLists.txt
lib/iree/compiler/Dialect/Flow/IR/: CMakeLists.txt  FlowBase.td  FlowDialect.cpp  FlowDialect.h  FlowOpFolders.cpp  FlowOpUtils.cpp  FlowOpUtils.h  FlowOps.cpp  FlowOps.h  FlowOps.td  FlowTypes.cpp  (+1 more)
lib/mhlo/IR/: CMakeLists.txt  chlo_canonicalize.td  chlo_ops.cc  convert_op_folder.cc  dialect_registration.cc  hlo_ops.cc  hlo_ops_base_structs.cc  hlo_patterns.td  hlo_utils.cc  infer_fusibility_op_interface.cc  init.cc  lhlo_ops.cc  mhlo_canonicalize.td
lib/tfrt/basic_kernel/: CMakeLists.txt  basic_kernels.cc  static_registration.cc
src/: CMakeLists.txt  main.cpp  mutate.cpp  tensor_reshape.cpp
(+10 files in other folders)
